# utilsgen-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release-binaries.yml
src/: cmd_handler.rs  main.rs  sfgen.rs  ulidgen.rs  uuidgen.rs
